<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/login"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usename"
            android:background="@drawable/custom_edit_text"
            android:drawablePadding="10dp"
            android:padding="20dp"
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/edit_icon_user"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="20dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edit_text"
                android:padding="20dp"
                android:paddingStart="5dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/edit_icon_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/color_text_forget_password_and_sign_up"
                android:layout_weight="1"
                android:text="@string/forget_password"
                android:id="@+id/forget_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                />

            <TextView
                android:textColor="@color/color_text_forget_password_and_sign_up"
                android:layout_weight="1"
                android:id="@+id/txt_sign_up"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sign_up" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>